<resources>
    <string name="app_name">Eat Out To Help Out</string>
    <string name="location_not_found">Location not found</string>
    <string name="location_network_error">Check your network connectivity</string>
    <string name="location_server_error">Something went wrong</string>
    <string name="search_hint">Search by postcode or town</string>
    <string name="title_activity_g_maps">Map</string>
    <string name="about_spiel">Use this app to find participants of the <a href="https://www.gov.uk/guidance/get-a-discount-with-the-eat-out-to-help-out-scheme">Eat Out to Help Out</a> scheme. You can search using a postcode (e.g. "M1" or "M4 4BF") or a town ("Manchester") or borough ("South Ribble").\n\nUse the Eat Out to Help Out Scheme at a participating establishment to get a 50% discount on food or non-alcoholic drinks to eat or drink in (up to a maximum of £10 discount per diner) every Monday, Tuesday and Wednesday between 3 and 31 August as many times as you like.\n\nYou do not need a voucher to use this scheme and you can use it at the same time as other offers and discounts. There is no minimum spend.\n\nYou cannot claim discount on alcoholic drinks or service charges.\n\nThis tool uses the published <a href="https://github.com/hmrc/eat-out-to-help-out-establishments">data set</a> on the HMRC GitHub repository and is updated with the latest list of establishments daily. Please note, the HMRC data set does not include larger chains, so some participating restaurants are not included in the search at the moment. This is a list of <a href="https://www.tax.service.gov.uk/eat-out-to-help-out/find-a-restaurant/restaurant-chains">Chain restaurants and large businesses</a> registered for the scheme.\n\nThe direct links to the restaurant use a <a href="https://duckduckgo.com/">duckduckgo</a> search of the restaurant\'s name and postcode - which typically lands on the correct page, though not all establishments have been checked and there is no guarantee that it will find the right place.\n\nRead all about <a href="https://beny23.github.io/posts/discounted_dining_finder/">how it was built</a>.</string>
    <string name="about_title">About</string>
    <string name="opensource_attributions">OpenSource Attributions</string>
    <string name="opensource_attributions_text">The creation of this software was made possible by using OpenSource software.</string>
    <string name="opensource_attributions_details">View OpenSource Attributions</string>
</resources>