<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:text="@string/about_title"
            android:textSize="28sp"
            android:gravity="center_vertical"
            android:drawablePadding="16dp"
            android:layout_marginBottom="12dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableLeftCompat="@drawable/ic_eatout_nopadding" />

        <TextView
            android:id="@+id/aboutSpiel"
            android:bufferType="spannable"
            android:linksClickable="true"
            android:text="@string/about_spiel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/opensource_attributions"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/opensource_attributions_text"/>

        <Button
            android:id="@+id/viewOpenSourceAttributions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opensource_attributions_details"/>

    </LinearLayout>
</ScrollView>